--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,36 +1,40 @@
 <div *ngIf="person">
     <h3>{{ person.name}}</h3>
 
-    <div>
-        <label>Id:</label>
-        {{ person.id }}
-    </div>
+    <form (ngSubmit)="save()" #editForm="ngForm">
+        <div>
+            <label>Id:</label>
+            {{ person.id }}
+        </div>
 
-    <div>
-        <label>Name:</label>
-        <input [(ngModel)]="person.name" name="name" id="name" placeholder="Name">
-    </div>
+        <div>
+            <label>Name:</label>
+            <input [(ngModel)]="person.name" name="name" id="name" placeholder="Name" required #name="ngModel">
+            
+            <div [hidden]="name.valid || name.pristine" style="color: red;">Name is required</div>
+        </div>
 
-    <div>
-        <label>Phone:</label>
-        <input [(ngModel)]="person.phone" name="phone" id="phone" placeholder="Phone">
-    </div>
+        <div>
+            <label>Phone:</label>
+            <input [(ngModel)]="person.phone" name="phone" id="phone" placeholder="Phone">
+        </div>
 
-    <fieldset>
-        <legend>Address:</legend>
+        <fieldset>
+            <legend>Address:</legend>
 
-        <address>
-            <input [(ngModel)]="person.address.street" id="street"><br/>
+            <address>
+                <input [(ngModel)]="person.address.street" name="street" id="street"><br/>
 
-            <input [(ngModel)]="person.address.city" id="city">,
+                <input [(ngModel)]="person.address.city" name="city" id="city">,
 
-            <input [(ngModel)]="person.address.state" id="state" size="2">
+                <input [(ngModel)]="person.address.state" name="state" id="state" size="2">
 
-            <input [(ngModel)]="person.address.zip" id="zip" size="5">
-        </address>
-    </fieldset>
+                <input [(ngModel)]="person.address.zip" name="zip" id="zip" size="5">
+            </address>
+        </fieldset>
 
-    <button (click)="save()" id="save">Save</button>
+        <button type="submit" id="save" [disabled]="!editForm.form.valid" (click)="save()" id="save">Save</button>
 
-    <button (click)="cancel()" id="cancel">Cancel</button>
+        <button (click)="cancel()" id="cancel">Cancel</button>
+    </form> 
 </div>
