--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,3 +1,13 @@
+:host {
+    padding: 0px 20px 0px 20px;
+    display: block;
+}
+
+h2 {
+    color: #fff;
+    margin-top: 10px;
+}
+
 table {
     margin-top: 10px;
     border-collapse: collapse;
