--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,33 +1,54 @@
 <h2>Search</h2>
 
 <form>
-    <input type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()"/>
-    <button type="button" (click)="search()">Search</button>
+    <mat-form-field>
+        <!-- <input type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()"/> -->
+        <input matInput type="search" name="query" [(ngModel)]="query" (keyup.enter)="search()" placeholder="Search">
+    </mat-form-field>
+
+    <button mat-mini-fab (click)="search()">
+        <mat-icon>search</mat-icon>
+    </button>
 </form>
 
-<table *ngIf="searchResults?.length">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Phone</th>
-            <th>Address</th>
-        </tr>
-    </thead>
+<mat-list *ngIf="searchResults?.length" flex>
+    <mat-list-item *ngFor="let person of searchResults; let i=index">
+        <div class="mat-list-item-text">
+            <div mat-line>
+                <a [routerLink]="['/edit', person.id]">{{person.name}}</a>
+            </div>
 
-    <tbody>
-        <tr *ngFor="let person of searchResults; let i=index">
-            <td>
-                <a [routerLink]="['/edit', person.id]">
-                    {{ person.name }}
-                </a>
-            </td>
-            <td>{{ person.phone }}</td>
-            <td>
-                {{ person.address.street }} <br/>
-                {{ person.address.city }}, 
-                {{ person.address.state }}, 
-                {{ person.address.zip }}
-            </td>
-        </tr>
-    </tbody>
-</table>
+            <div mat-line>{{person.phone}}</div>
+
+            <div mat-line>
+                {{person.address.street}}<br/>
+                {{person.address.city}}, {{person.address.state}} {{person.address.zip}}
+            </div>
+        </div>
+
+        <!-- <thead>
+            <tr>
+                <th>Name</th>
+                <th>Phone</th>
+                <th>Address</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr *ngFor="let person of searchResults; let i=index">
+                <td>
+                    <a [routerLink]="['/edit', person.id]">
+                        {{ person.name }}
+                    </a>
+                </td>
+                <td>{{ person.phone }}</td>
+                <td>
+                    {{ person.address.street }} <br/>
+                    {{ person.address.city }}, 
+                    {{ person.address.state }}, 
+                    {{ person.address.zip }}
+                </td>
+            </tr>
+        </tbody> -->
+    </mat-list-item>
+</mat-list>
