--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,13 @@
 <div>
   <button  *ngIf="(auth.isAuthenticated$ | async) === false" (click)="login()">Login</button>
+
+  <div *ngIf="auth.user$ | async as user">
+    <h2>Welcome, {{user?.name}}!</h2>
+
+    <p>
+      <a routerLink="/search" routerLinkActive="active">Search</a>
+    </p>
+  </div>
+
   <button *ngIf="auth.isAuthenticated$ | async" (click)="logout()">Logout</button>
 </div>
